feat: added list cities handler
